syntax = "proto3";

package depot.cli.v1;

import "google/protobuf/timestamp.proto";

service BuildService {
  rpc CreateBuild(CreateBuildRequest) returns (CreateBuildResponse);
  rpc FinishBuild(FinishBuildRequest) returns (FinishBuildResponse);
  rpc GetBuildKitConnection(GetBuildKitConnectionRequest) returns (GetBuildKitConnectionResponse);
  rpc ReportBuildHealth(ReportBuildHealthRequest) returns (ReportBuildHealthResponse);
  rpc ReportTimings(ReportTimingsRequest) returns (ReportTimingsResponse);
}

message CreateBuildRequest {
  string project_id = 1;
}

message CreateBuildResponse {
  string build_id = 1;
  string build_token = 2;
  Registry registry = 3;
}

message Registry {
  bool can_use_local_registry = 1;
}

message FinishBuildRequest {
  string build_id = 1;
  oneof result {
    BuildSuccess success = 2;
    BuildError error = 3;
  }

  message BuildSuccess {}

  message BuildError {
    string error = 1;
  }
}

message FinishBuildResponse {}

enum BuilderPlatform {
  BUILDER_PLATFORM_UNSPECIFIED = 0;
  BUILDER_PLATFORM_AMD64 = 1;
  BUILDER_PLATFORM_ARM64 = 2;
}

message GetBuildKitConnectionRequest {
  string build_id = 1;
  BuilderPlatform platform = 2;
}

message GetBuildKitConnectionResponse {
  oneof connection {
    PendingConnection pending = 1;
    ActiveConnection active = 2;
  }

  message PendingConnection {
    int32 wait_ms = 1;
  }

  message ActiveConnection {
    string endpoint = 1;
    string server_name = 2;
    Cert cert = 3;
    Cert ca_cert = 4;
  }
}

message Cert {
  string cert = 1;
  string key = 2;
}

message ReportBuildHealthRequest {
  string build_id = 1;
  BuilderPlatform platform = 2;
}

message ReportBuildHealthResponse {}

message ReportTimingsRequest {
  string build_id = 1;
  repeated BuildStep build_steps = 2;
}

message ReportTimingsResponse {}

message BuildStep {
  google.protobuf.Timestamp start_time = 1;
  int32 duration_ms = 2;
  string name = 3;
  optional string error = 4;
  optional string stable_digest = 5;
  bool cached = 6;
  repeated string input_digests = 7;
  repeated string ancestor_digests = 8;
}
